# contabot-server

./: .dockerignore  .env.example  Dockerfile  STARTUP.md  main.py  pyproject.toml  requirements.txt  test_agent.py  test_agent_tools.py
src/: config.py
src/agent/: __init__.py  agent.py  prompts.py
src/models/: schemas.py
src/services/: __init__.py  pocketbase_client.py  telegram.py  transcription.py
src/tools/: __init__.py  categories.py  expenses.py
src/webhook/: handlers.py
